--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,15 +30,16 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y python3-pip
         pip3 install awscli --upgrade --user
-    - name: Print variables
+    - name: Deploy to S3
+      env:
+        ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY_ID }}
+        SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
       run: |
         echo "secrets.ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY_ID }}"
         echo "secrets.SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}"
-        echo "ACCESS_KEY_ID: $ACCESS_KEY_ID }}"
-        echo "SECRET_ACCESS_KEY: SECRET_ACCESS_KEY }}"
-#    - name: Deploy to S3
-#      env:
-#        ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY_ID }}
-#        SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
+        echo "ACCESS_KEY_ID: $ACCESS_KEY_ID"
+        echo "SECRET_ACCESS_KEY: $SECRET_ACCESS_KEY"
+        echo $ACCESS_KEY_ID
+        echo $SECRET_ACCESS_KEY
 #      run: |
 #        aws s3 sync dist/portfolio s3://tr-portfolio-bucket --delete
