--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,3 +40,16 @@ jobs:
     - name: Deploy to S3
       run: |
         aws s3 sync dist/portfolio/browser s3://tr-portfolio-bucket --delete
+#    - name: Deploy to EC2
+#      run : |
+#        ssh -i ${{ secrets.SSH_PRIVATE_KEY }} ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}
+    - name: COPY FILES TO EC2 INSTANCE
+      uses: appleboy/scp-action@v0.1.7
+      with:
+        host: ${{ secrets.EC2_HOST }}
+        username: ${{ secrets.EC2_USERNAME }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        port: 22
+        source: "dist/portfolio/browser"
+        target: /var/www/html/
+
