--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@aws-sdk/client-s3": "^3.583.0",
+    "@aws-sdk/credential-providers": "^3.583.0",
+    "assemblyai": "^4.4.3",
     "date-fns": "^3.6.0",
+    "docx": "^8.5.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
