--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,3 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -18,15 +17,10 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
-    "lib": [
-      "ES2022",
-      "dom"
-    ],
-    "baseUrl": ".",
+    "lib": ["ES2022", "dom"],
+    "baseUrl": "./",
     "paths": {
-      "@home/*": [
-        "./src/app/features/home/*"
-      ]
+      "@home/*": ["./src/app/pages/home/*"]
     }
   },
   "angularCompilerOptions": {
