--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@aws-sdk/client-s3": "^3.583.0",
+    "@aws-sdk/client-dynamodb": "^3.583.0",
+    "@aws-sdk/lib-dynamodb": "^3.583.0",
     "@aws-sdk/credential-providers": "^3.583.0",
     "assemblyai": "^4.4.3",
     "date-fns": "^3.6.0",
